<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".BarcodeResultActivity">

  <include
    android:id="@+id/top_action_bar"
    layout="@layout/top_action_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_action_bar_height"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/barcode_result"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:scrollbars="vertical"
    android:text="Result"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="@color/colorText"
    android:textIsSelectable="true"
    app:layout_constraintBottom_toTopOf="@id/ib_copy"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/barcode_format" />

  <TextView
    android:id="@+id/result_type"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="24dp"
    android:text="Type"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="@color/colorAccent"
    app:layout_constraintTop_toBottomOf="@id/top_action_bar"
    app:layout_constraintBottom_toTopOf="@id/barcode_format"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <TextView
    android:id="@+id/barcode_format"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:text="Format"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"
    android:textColor="@color/lighter_grey"
    app:layout_constraintTop_toBottomOf="@id/result_type"
    app:layout_constraintBottom_toTopOf="@id/barcode_result"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <ImageButton
    android:id="@+id/ib_copy"
    android:layout_width="66dp"
    android:layout_height="66dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/btn_background"
    android:src="@drawable/ic_content_copy_black_36dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/ib_action"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/txt_copy"
    android:layout_width="72dp"
    android:layout_height="wrap_content"
    android:text="@string/action_copy"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/ib_copy"
    app:layout_constraintStart_toStartOf="@+id/ib_copy"
    app:layout_constraintTop_toBottomOf="@+id/ib_copy"
    app:layout_constraintVertical_bias="0.03" />

  <ImageButton
    android:id="@+id/ib_action"
    android:layout_width="66dp"
    android:layout_height="66dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/btn_background"
    android:src="@drawable/ic_public_black_44dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/ib_search"
    app:layout_constraintStart_toEndOf="@id/ib_copy" />

  <TextView
    android:id="@+id/txt_action"
    android:layout_width="72dp"
    android:layout_height="wrap_content"
    android:text="@string/action_web"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/ib_action"
    app:layout_constraintStart_toStartOf="@+id/ib_action"
    app:layout_constraintTop_toBottomOf="@+id/ib_action"
    app:layout_constraintVertical_bias="0.03" />

  <ImageButton
    android:id="@+id/ib_search"
    android:layout_width="66dp"
    android:layout_height="66dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="64dp"
    android:background="@drawable/btn_background"
    android:src="@drawable/ic_search_black_44dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/ib_action" />

  <TextView
    android:id="@+id/txt_search"
    android:layout_width="72dp"
    android:layout_height="wrap_content"
    android:text="@string/action_web_search"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/ib_search"
    app:layout_constraintStart_toStartOf="@+id/ib_search"
    app:layout_constraintTop_toBottomOf="@+id/ib_search"
    app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>
