...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:srcCompat="@drawable/ic_photo_library_vd_white_24" />

  <TextView
    android:id="@+id/top_action_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
...
